; ModuleID = '/home/carl/AnghaBench/git/extr_setup.c_sanitize_stdfds.c'
source_filename = "/home/carl/AnghaBench/git/extr_setup.c_sanitize_stdfds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/dev/null\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"open /dev/null or dup failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sanitize_stdfds() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @O_RDWR, align 4
  %3 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %2, i32 0)
  store i32 %3, i32* %1, align 4
  br label %4

4:                                                ; preds = %12, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp ne i32 %5, -1
  br i1 %6, label %7, label %10

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = icmp slt i32 %8, 2
  br label %10

10:                                               ; preds = %7, %4
  %11 = phi i1 [ false, %4 ], [ %9, %7 ]
  br i1 %11, label %12, label %15

12:                                               ; preds = %10
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @dup(i32 %13)
  store i32 %14, i32* %1, align 4
  br label %4

15:                                               ; preds = %10
  %16 = load i32, i32* %1, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = call i32 @_(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @die_errno(i32 %19)
  br label %21

21:                                               ; preds = %18, %15
  %22 = load i32, i32* %1, align 4
  %23 = icmp sgt i32 %22, 2
  br i1 %23, label %24, label %27

24:                                               ; preds = %21
  %25 = load i32, i32* %1, align 4
  %26 = call i32 @close(i32 %25)
  br label %27

27:                                               ; preds = %24, %21
  ret void
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @dup(i32) #1

declare dso_local i32 @die_errno(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
